--- a/JBlogWeb/src/main/resources/application.yml
+++ b/JBlogWeb/src/main/resources/application.yml
@@ -1,11 +1,38 @@
+# 서버 설정
 server:
   port: 8080
   servlet:
     context-path: /
     encoding:
       charset: UTF-8
+      
+# 뷰리졸버 설정
 spring:
   mvc:
     view:
       prefix: /WEB-INF/jblog
       suffix: .jsp
+
+# 데이터소스 설정, 무조건 spring 하위에 작성해야 함.
+# yml 파일은 처음 쓸 때 공백 2개, 그다음 공백 2+2, 등등 들여쓰기 주의
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password:
+    
+    
+# JPA 설정
+  jpa:
+    open-in-view: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: update
+      use-new-id-generator-mapping: false
+    properties:
+      hibernate.format_sql: true
+    
+    
